# orca-validator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
backend/: Dockerfile  deps.py  queue.py  schemas.py
backend/api/: documents.py  health.py  machines.py  visits.py
backend/app/: config.py  database.py  main.py  state.py
backend/export/: docx.py  redline.py
backend/llm/: budget.py  together.py
backend/models/: __init__.py
backend/ocr/: extract.py  parser_client.py  reader.py  result.py
backend/orca/: bridge.py  diagram.py  document_fsm.py  persistence.py  registry.py  verification.py
backend/orca/actions/: contract_actions.py
backend/parser/: app.py
backend/pipeline/: validate.py  worker.py
backend/storage/: blobs.py
machines/: __init__.py  ai_assessment.orca.md  contract_validation.orca.md  document_pipeline.orca.md  ingestion.orca.md
migrations/: env.py
migrations/versions/: 0002_ai_layer.py  0003_document_fsm.py  0004_run_temperature.py  4e423202c85f_initial_schema.py
openspec/: config.yaml
openspec/changes/bootstrap-orca-validator/: design.md  proposal.md  tasks.md
ops/: DEPLOY.md
ops/ci/: verify.yml
ops/nginx/: orca.cyberiad.ai.conf
tests/: conftest.py  test_bridge.py  test_e2e.py  test_ocr.py  test_verification.py
web/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json
web/app/: MachineDiagram.tsx  globals.css  layout.tsx  page.tsx
web/app/privacy/: page.tsx
web/app/tos/: page.tsx
web/app/visits/: page.tsx
web/lib/: backend.ts
(+10 files in other folders)
